# llvm-assignment

./: CMakeLists.txt  README.md
include/: Obfuscator.h
inputs/: .input_for_obfuscator.cpp.swp  input_for_obfuscator.cpp  input_for_obfuscator.ll
lib/: CMakeLists.txt  Obfuscator.cpp
test/: obfuscator.ll
